# SecurityHub-Community

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  env.example  install.sh  openapi-schema.yaml  pyproject.toml  pytest.ini  requirements.txt  uninstall.sh
.github/workflows/: ci.yml  container-registry.yml  docker.yml  release.yml  security.yml
docker/: Dockerfile_API  Dockerfile_API.dev  Dockerfile_frontend  Dockerfile_frontend.dev
docs/: INSTALLATION.md
frontend/: README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.new.cjs  tsconfig.json  verify-implementation.sh  vite.config.js
frontend/__mocks__/: fileMock.js  styleMock.js
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/tests/: __init__.py  run_tests.js  setup.ts  test_advanced_vulnerability_search.test.tsx  test_scanner_integration.test.tsx  test_vulnerability_dashboard.test.tsx  test_vulnerability_database_manager.test.tsx
scripts/: backend.dev.sh  backend.sh  nginx.conf
securityhub/: manage.py  test_acunetix_parser.py  test_parser_service.py  test_parser_suite.py
securityhub/accounts/: admin.py  apps.py  models.py  security_middleware.py  serializers.py  spectacular_extensions.py  tasks.py  tests.py  token_utils.py  urls.py  views.py
securityhub/assets/: models.py  serializers.py  urls.py  views.py
securityhub/configapi/: admin.py  bundled_docx_templates.py  models.py  serializers.py  urls.py
securityhub/dashboard/: models.py  tasks.py  urls.py  views.py
securityhub/docs-ui/: README.md  app.js  data.js  index.html  parse_docs.py  styles.css
securityhub/documentation/: README.md  api-reference.json
securityhub/lib/: htmldocx.py
(+186 files in other folders)
