[tool.poetry]
name = "securityhub"
version = "1.0"
description = "SecurityHub is a Python and Django-based enterprise vulnerability management platform designed for penetration testers and security organizations. It streamlines report generation by enabling users to create PDF and Excel reports directly, and provides a systematic way to monitor and manage vulnerabilities within various projects."
authors = ["SecurityHub Community"]
license = "SecurityHub Licence"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "4.2.22"
djangorestframework = "3.15.2"
gunicorn = "23.0.0"
pillow = "10.4.0"
pytz = "2022.6"
sqlparse = "0.5.0"
tzdata = "^2024.1"
django-cors-headers = "3.13.0"
djangorestframework-simplejwt = "5.3.1"
colorlog = "6.7.0"
django-filter = "23.5"
python-dotenv = "1.0.0"
weasyprint = "^62.3"
pydyf = ">=0.10.0,<0.12.0"
pygal = "3.0.4"
bleach = {extras = ["css"], version = "^6.2.0"}
whitenoise = "6.6.0"
docxtpl = "0.18.0"
redis = "5.0.1"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.4"
django-redis = "^5.4.0"
boto3 = "^1.34.159"
django-storages = "^1.14.4"
bs4 = "^0.0.2"
beautifulsoup4 = "^4.12.0"
requests = "^2.32.3"

# Parser Dependencies
defusedxml = "^0.7.1"
html2text = "^2020.1.16"
cvss = "^2.5"
python-dateutil = "^2.8.2"
hyperlink = "^21.0.0"
drf-spectacular = "^0.28.0"

# File handling and document processing
python-magic = "^0.4.27"
docxcompose = "^1.4.0"
django-timezone-field = "^7.0.0"
python-docx = "^1.1.0"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
pytest = "^9.0.2"
pytest-django = "^4.11.1"
coverage = "^7.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


